--- a/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
+++ b/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
@@ -50,7 +50,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helpers\CollectionFormingDeepLinkParser.cs" />
+    <Compile Include="Helpers\DeepLinkParser\CollectionFormingDeepLinkParser.cs" />
     <Compile Include="Helpers\BackgroundTaskHelper.cs" />
     <Compile Include="Helpers\ColorHelper.cs" />
     <Compile Include="Helpers\ConnectionHelper.cs" />
@@ -59,8 +59,8 @@
     <Compile Include="Helpers\ObjectStorage\IObjectStorageHelper.cs" />
     <Compile Include="Helpers\ObjectStorage\LocalObjectStorageHelper.cs" />
     <Compile Include="Helpers\ObjectStorage\RoamingObjectStorageHelper.cs" />
-    <Compile Include="Helpers\DeepLinkParser.cs" />
-    <Compile Include="Helpers\QueryParameterCollection.cs" />
+    <Compile Include="Helpers\DeepLinkParser\DeepLinkParser.cs" />
+    <Compile Include="Helpers\DeepLinkParser\QueryParameterCollection.cs" />
     <Compile Include="Helpers\PrintHelper\PrintHelper.cs" />
     <Compile Include="Helpers\PrintHelper\PrintHelperStateBag.cs" />
     <Compile Include="Helpers\HttpHelper\HttpHelper.cs" />
