--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -122,12 +122,12 @@
     <Compile Include="Helpers\Test_StorageFileHelper.cs" />
     <Compile Include="Helpers\Test_HttpHelper.cs" />
     <Compile Include="Helpers\Test_StreamHelper.cs" />
-    <Compile Include="DeepLinkParserTests.cs" />
+    <Compile Include="Helpers\Test_DeepLinkParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\Test_WeakEventListener.cs" />
     <Compile Include="Services\Test_BingService.cs" />
-    <Compile Include="TestParsers.cs">
-      <DependentUpon>DeepLinkParserTests.cs</DependentUpon>
+    <Compile Include="Helpers\TestParsers.cs">
+      <DependentUpon>Test_DeepLinkParser.cs</DependentUpon>
     </Compile>
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
