--- a/Microsoft.Toolkit.Uwp.UI.Animations/Microsoft.Toolkit.Uwp.UI.Animations.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Animations/Microsoft.Toolkit.Uwp.UI.Animations.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Behaviors\Blur.cs" />
     <Compile Include="Behaviors\CompositionBehaviorBase.cs" />
+    <Compile Include="Behaviors\DropShadow.cs" />
     <Compile Include="Behaviors\FadeHeaderBehavior.cs" />
     <Compile Include="Behaviors\Offset.cs" />
     <Compile Include="Behaviors\Fade.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="AnimationSet.cs" />
     <Compile Include="EffectAnimationDefinition.cs" />
     <Compile Include="EffectDirectPropertyChangeDefinition.cs" />
+    <Compile Include="Extensions\AnimationExtensions.DropShadow.cs" />
     <Compile Include="Extensions\AnimationExtensions.Blur.cs" />
     <Compile Include="Extensions\AnimationExtensions.cs" />
     <Compile Include="Extensions\AnimationExtensions.Fade.cs" />
