--- a/Microsoft.Toolkit.Uwp.UI/Microsoft.Toolkit.Uwp.UI.csproj
+++ b/Microsoft.Toolkit.Uwp.UI/Microsoft.Toolkit.Uwp.UI.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Converters\CollectionVisibilityConverter.cs" />
     <Compile Include="Converters\ConverterTools.cs" />
     <Compile Include="Converters\EmptyCollectionToObjectConverter.cs" />
+    <Compile Include="Converters\EmptyObjectToObjectConverter.cs" />
     <Compile Include="Converters\EmptyStringToObjectConverter.cs" />
     <Compile Include="Extensions\ListViewBaseExtensions.cs" />
     <Compile Include="Extensions\HyperlinkExtensions.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Converters\StringFormatConverter.cs" />
     <Compile Include="Extensions\VisualTreeExtensions.cs" />
     <Compile Include="Extensions\WebViewExtensions.cs" />
+    <Compile Include="Helpers\BindableValueHolder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
