Update to latest (#1)
* New MasterDetailsView control to follow the Master/Details pattern

* Update file headers

* Add summary tags for class and ctor

* Remove side margin for list item template

* Add a header object to the master pane

* simplify border between master and details and remove it when narrow

* Rename unloaded event handler

* Rename variable to match control name

* Add content to display in the details area when there is no selection

* template bind the ItemContainerStyle

* use nameof instead of strings for the dependency properties

* Remove the SplitPane to overcome issues with pushing the back button closing the master pane when in a narrow state. Use Composition animations to animate the details in out.

* Update xml comments

* Allow other pages to handle the BackRequested event before the Shell does so the app does not navigate back when the event is already handled

* Remove xaml setting not intended

* Move border between master/details panels up a level now that there is a header for the master area

* Hide the NoSelectionContent when there is no selection and the view is in narrow state

* Subscribe to the SizeChanged of the details presenter rather than the control itself to get an accurate size of the presenter

* Fire the SelectionChanged event when the SelectedItem changes

* Rename background property from List to Master

* Allow the user to easily change the default width of the master pane

* Move properties to a separate file to match project standards

* Move events to a separate file to match project standards

* Provide a way to map the selected item of the master to a different detail object

* Remove unused using

* add lines between properties

* Correct class name and update xaml for sample

* Change file encoding

* remove unused using

* Remove reference to this

* Remove odd button

* Add constants for elements and states

* Add TemplatePart attribute f

--- a/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
@@ -248,6 +248,7 @@
     <Content Include="SamplePages\ImageEx\ImageEx.png" />
     <Content Include="SamplePages\Incremental Loading Collection\icon.png" />
     <Content Include="SamplePages\LinkedIn Service\LinkedInLogo.png" />
+    <Content Include="SamplePages\MasterDetailsView\MasterDetailsView.png" />
     <Content Include="SamplePages\Microsoft Graph Service\OfficeLogo.png" />
     <Content Include="SamplePages\Microsoft Graph Service\user.png" />
     <Content Include="SamplePages\Offset\OffsetBehavior.png" />
@@ -318,6 +319,7 @@
     <Content Include="SamplePages\WeatherLiveTileAndToast\WeatherLiveTileAndToastCodeJavaScript.bind" />
     <Content Include="SamplePages\Microsoft Graph Service\MicrosoftGraphCode.bind" />
     <Content Include="SamplePages\BackgroundTaskHelper\BackgroundTaskHelperCode.bind" />
+    <Content Include="SamplePages\MasterDetailsView\MasterDetailsView.bind" />
     <Content Include="SamplePages\ConnectionHelper\ConnectionHelperCode.bind" />
     <Content Include="SamplePages\PrintHelper\PrintHelperCode.bind" />
   </ItemGroup>
@@ -331,6 +333,7 @@
     <Compile Include="Common\SolidColorBrushConverter.cs" />
     <Compile Include="Common\DelegateCommand.cs" />
     <Compile Include="Common\Tools.cs" />
+    <Compile Include="Models\Email.cs" />
     <Compile Include="SamplePages\ConnectionHelper\ConnectionHelperPage.xaml.cs">
       <DependentUpon>ConnectionHelperPage.xaml</DependentUpon>
     </Compile>
@@ -380,6 +383,9 @@
     <Compile Include="SamplePages\Incremental Loading Collection\Person.cs" />
     <Compile Include="SamplePages\LinkedIn Service\LinkedInPage.xaml.cs">
       <DependentUpon>LinkedInPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SamplePages\MasterDetailsView\MasterDetailsViewPage.xaml.cs">
+      <DependentUpon>MasterDetailsViewPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="SamplePages\Microsoft Graph Service\MicrosoftGraphPage.xaml.cs">
       <DependentUpon>MicrosoftGraphPage.xaml</DependentUpon>
@@ -526,6 +532,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="SamplePages\LinkedIn Service\LinkedInPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SamplePages\MasterDetailsView\MasterDetailsViewPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
