--- a/Microsoft.Toolkit.Uwp.UI.Animations/project.json
+++ b/Microsoft.Toolkit.Uwp.UI.Animations/project.json
@@ -2,8 +2,9 @@
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
+    "PlatformSpecific.Analyzer": "2.0.3",
     "StyleCop.Analyzers": "1.0.0",
-    "Win2D.uwp": "1.18.0"
+    "Win2D.uwp": "1.19.0"
   },
   "frameworks": {
     "uap10.0": {}
