#229 Adding OneDrive Service

--- a/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
+++ b/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
@@ -76,7 +76,21 @@
     <Compile Include="Services\LinkedIn\LinkedInShareVisibility.cs" />
     <Compile Include="Services\LinkedIn\LinkedInShareRequest.cs" />
     <Compile Include="Services\LinkedIn\LinkedInVisibility.cs" />
+    <Compile Include="Services\MicrosoftGraph\Drive\MicrosoftGraphOneDriveService.cs" />
+    <Compile Include="Services\MicrosoftGraph\Drive\OneDriveConstants.cs" />
+    <Compile Include="Services\MicrosoftGraph\Drive\OneDriveItemConflictBehavior.cs" />
+    <Compile Include="Services\MicrosoftGraph\Drive\OneDriveItemExtension.cs" />
+    <Compile Include="Services\MicrosoftGraph\Drive\OneDriveParentReference.cs" />
+    <Compile Include="Services\MicrosoftGraph\Drive\OneDriveStorageFile.cs" />
+    <Compile Include="Services\MicrosoftGraph\Drive\OneDriveStorageFolder.cs" />
+    <Compile Include="Services\MicrosoftGraph\Drive\OneDriveStorageItem.cs" />
+    <Compile Include="Services\MicrosoftGraph\Drive\OneDriveStorageItemsCollection.cs" />
+    <Compile Include="Services\MicrosoftGraph\Drive\OneDriveStorageItemsEnumerator.cs" />
+    <Compile Include="Services\MicrosoftGraph\Drive\OneDriveUploadSession.cs" />
+    <Compile Include="Services\MicrosoftGraph\Drive\OneDriveUploadSessionEventArgs.cs" />
+    <Compile Include="Services\MicrosoftGraph\JWToken.cs" />
     <Compile Include="Services\MicrosoftGraph\MicrosoftGraphAuthenticationHelper.cs" />
+    <Compile Include="Services\MicrosoftGraph\MicrosoftGraphEnums.cs" />
     <Compile Include="Services\MicrosoftGraph\MicrosoftGraphHelper.cs" />
     <Compile Include="Services\MicrosoftGraph\MicrosoftGraphCoreService.cs" />
     <Compile Include="Services\MicrosoftGraph\MicrosoftGraphExtensions.cs" />
