--- a/Microsoft.Toolkit.Uwp.Services/project.json
+++ b/Microsoft.Toolkit.Uwp.Services/project.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "Microsoft.Graph": "1.1.1",
     "Microsoft.IdentityModel.Clients.ActiveDirectory": "3.13.7",
+    "Microsoft.Identity.Client": "1.0.304142221-alpha",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "StyleCop.Analyzers": "1.0.0",
     "winsdkfb": "0.12.20161020.4"
